src/elements/snapshots/laser_pdf__elements__center_in_preferred_height__tests__breakable.snap
---
source: src/elements/center_in_preferred_height.rs
expression: content.into_passes()
---
[
    Measure {
        width: WidthConstraint {
            max: 12.0,
            expand: true,
        },
        first_height: 25.0,
        full_height: None,
    },
    Draw(
        DrawPass {
            width: WidthConstraint {
                max: 12.0,
                expand: true,
            },
            first_height: 21.0,
            preferred_height: None,
            page: 0,
            layer: 0,
            pos: (
                11.0,
                22.0,
            ),
            breakable: None,
        },
    ),
]
