src/elements/snapshots/laser_pdf__elements__center_in_preferred_height__tests__preferred_height-2.snap
---
source: src/elements/center_in_preferred_height.rs
expression: output
---
ElementTestOutput {
    size: ElementSize {
        width: Some(
            12.0,
        ),
        height: Some(
            26.0,
        ),
    },
    breakable: Some(
        ElementTestOutputBreakable {
            break_count: 1,
            extra_location_min_height: None,
            first_location_usage: WillSkip,
        },
    ),
}
