src/elements/snapshots/laser_pdf__elements__center_in_preferred_height__tests__unbreakable-2.snap
---
source: src/elements/center_in_preferred_height.rs
expression: output
---
ElementTestOutput {
    size: ElementSize {
        width: Some(
            12.0,
        ),
        height: Some(
            21.0,
        ),
    },
    breakable: None,
}
